fix(service marketplace): PM2-1391 service marketplace button alignment and search (#144)

--- a/src/components/pages/NotificationCenter/style.scss
+++ b/src/components/pages/NotificationCenter/style.scss
@@ -210,6 +210,7 @@
   .searchContainer .MuiOutlinedInput-root {
     padding: 12px 20px 12px 20px !important;
     height: 52px;
+    border-radius: 35px;
   }
 
   .iconSection {
