--- a/src/components/shared/templates/AdminBoard/style.scss
+++ b/src/components/shared/templates/AdminBoard/style.scss
@@ -58,6 +58,7 @@
   .searchContainer .MuiOutlinedInput-root {
     padding: 12px 20px 12px 20px !important;
     height: 52px;
+    border-radius: 35px;
   }
 
   .filterSection {
